# HistoReg

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  azure-pipelines.yaml
.github/workflows/: ci-build-run.yml
Data/Landmarks/: CD4.csv  CD68.csv
cmake_modules/: External-Eigen.cmake  External-ITK.cmake  External-OpenCV.cmake  Superbuild.cmake
src/: HistoReg.cxx  HistoReg.sh  HistoReg_external_use.sh
